--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="styles/overlay.css" />
     <link rel="stylesheet" href="styles/config.css" />
     <link rel="stylesheet" href="styles/game.css" />
+    <script defer src="/scripts/app.js"></script>
+    <script defer src="/scripts/config.js"></script>
+    <script defer src="/scripts/game.js"></script>
   </head>
   <body>
     <div id="backdrop"></div>
