save player name function

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="styles/overlay.css" />
     <link rel="stylesheet" href="styles/config.css" />
     <link rel="stylesheet" href="styles/game.css" />
-    <script defer src="/scripts/app.js"></script>
     <script defer src="/scripts/config.js"></script>
     <script defer src="/scripts/game.js"></script>
+    <script defer src="/scripts/app.js"></script>
   </head>
   <body>
     <div id="backdrop"></div>
@@ -25,10 +25,19 @@
         <form>
           <div class="form-control">
             <label for="playername">Player Name</label>
-            <input type="text" name="playername" id="playername" />
+            <input
+              type="text"
+              name="playername"
+              id="playername"
+              autocomplete="off"
+              required
+            />
           </div>
+          <p id="config-error"></p>
           <div>
-            <button type="button" class="btn btn-alt">Cancel</button>
+            <button type="reset" class="btn btn-alt" id="cancel-player-config">
+              Cancel
+            </button>
             <button type="submit" class="btn">Confirm</button>
           </div>
         </form>
@@ -36,19 +45,23 @@
       <section id="game-config">
         <ol>
           <li>
-            <article>
+            <article id="player-1-data">
               <h2>Player 1</h2>
-              <h3>PLACEHOLDER</h3>
+              <h3>Player Name 1</h3>
               <p class="player-symbol">X</p>
-              <button class="btn btn-alt" id="edit-player-1">Edit</button>
+              <button class="btn btn-alt" id="edit-player-1" data-player="1">
+                Edit
+              </button>
             </article>
           </li>
           <li>
-            <article>
+            <article id="player-2-data">
               <h2>Player 2</h2>
-              <h3>PLACEHOLDER</h3>
+              <h3>Player Name 2</h3>
               <p class="player-symbol">O</p>
-              <button class="btn btn-alt" id="edit-player-2">Edit</button>
+              <button class="btn btn-alt" id="edit-player-2" data-player="2">
+                Edit
+              </button>
             </article>
           </li>
         </ol>
