--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </article>
           </li>
         </ol>
-        <button class="btn">Start New Game</button>
+        <button id="start-game-btn" class="btn">Start New Game</button>
       </section>
       <section id="active-game">
         <article id="game-over">
@@ -75,17 +75,15 @@
 
         <p>It's your turn <span id="active-player-name">Player 1</span></p>
         <ol id="game-board">
-          <li></li>
-          <li></li>
-          <li></li>
-
-          <li></li>
-          <li></li>
-          <li></li>
-
-          <li></li>
-          <li></li>
-          <li></li>
+          <li data-col="1" data-row="1"></li>
+          <li data-col="2" data-row="1"></li>
+          <li data-col="3" data-row="1"></li>
+          <li data-col="1" data-row="2"></li>
+          <li data-col="2" data-row="2"></li>
+          <li data-col="3" data-row="2"></li>
+          <li data-col="1" data-row="3"></li>
+          <li data-col="2" data-row="3"></li>
+          <li data-col="3" data-row="3"></li>
         </ol>
       </section>
     </main>
